...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2"/>

            <TextView
                android:id="@+id/tvSlotCodeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/slotcode"
                android:text="@{viewModel.slotCode}"
...
